09-Oct-2015 Laurent Duflot
	* DetectorQuality: also check Tile and Core errors

08-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples
	* makeDatasetList.py: differentiate data and mc via prefix
	* PhysObjProxyUtils: fix typo in dPhiBadTile
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples

07-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples

06-Oct-2015 Laurent Duflot
	* makeDatasetList.py: add option --grl to filter list of datasets with
	runs from a grl
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples with runs in grl data15_13TeV.periodAllYear_DetStatus-v65-pro19-01_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples

05-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list of p2419 SM MC samples
	* data/mc15_13TeV_25ns_SM_xAOD.ds : update list of xAOD SM MC samples

03-Oct-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx, launch_jobs_on_grid.py: add p2425

03-Oct-2015 Laurent Duflot
	* data/data15_13TeV_p2425.ds : update list of p2425 data samples
	* tag as ZeroLeptonRun2-00-00-53

02-Oct-2015 Laurent Duflot
	* CRWT,CRZ,CR3L,BuildSUSYObjects: add trigger HLT_e24_lhmedium_iloose_L1EM20VH


01-Oct-2015 Laurent Duflot
	* data/mc15_13TeV_25ns_SM_p2419.ds: update list with latest production
	* data/data15_13TeV_p2425.ds : add current list of p2425 data samples

29-Sep-2015 Laurent Duflot
	* FilterUpdateMerge.cxx: update filtering cuts with values in GeV
	* mc15_13TeV_25ns_SM_p2419.ds: update list with latest production

28-Sep-2015 Geraldine Conti
	* included CR3L in the config file
	* Added reclustering for VRWT in config file

25-Sep-2015 Laurent Duflot
	* data/data15_13TeV_p2419.ds: add current list of p2419 data samples